--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "firebase": "^12.6.0",
     "next": "14.2.3",
     "prisma": "^5.22.0",
     "react": "^18.3.1",
