--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,36 @@
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
-# testing
-/coverage
-
 # next.js
-/.next/
-/out/
+.next
+out
+build
 
 # production
-/build
+.vercel
+.turbo
+
+# testing
+coverage
+
+# env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
 
 # misc
 .DS_Store
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-.env
-
-# vercel
-.vercel
-
-# typescript
 *.tsbuildinfo
 next-env.d.ts
 
-
-/lib/generated/prisma
-
-
-
-
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
